# Halcyonicus

./: .gitignore  CMakeLists.txt  Journal  halcyonicus.h  main.cpp  vcpkg.json
deprecated/: camera.h  cave.cpp  chunk.h  coordinate.h  location.h  map.cpp  map.h
graphics/: Camera.h  Mesh.h  Model.h  Shader.h  camera.h  initOpengl.cpp  initOpengl.h  texture.cpp  texture.h
graphics/chunk/: chunk3d.h
graphics/entity/: entity3d.h
graphics/shaders/: 1.model_loading.fs  1.model_loading.vs  basicVertex.glsl  fragment.glsl  shadowFragment.glsl  shadowVertex.glsl  vertex.glsl
hsrv/: halserver.h
lib/: Music  Network API Tracker
lib/assets/: ahe.fbx
lib/context/: hcontext.h
lib/controller/: player.h
lib/crypto/: base64.h  cc20.h  ecdh.h
lib/entity/: dynablob.h  entity.cpp  entity.h  entityCluster.cpp  entityCluster.h  entityStorage.cpp  entityStorage.h  entityTemplate.h  entitylocation.h  physics.h  playerController.h
lib/hash/: md5.cpp  md5.h
lib/hdb/: hdb.h
lib/logging/: hlogger.h
lib/net/: halNet.cpp  halNet.h  halNetP.cpp  halNetP.h  session.h
lib/noise/: perlin.h  worley.h
lib/object/: iobject3d.h
lib/sqlite/: sqlite3.h
lib/tools/: compressionTools.h  filetools.h  locationTranslationTools.h  streamtools.h  timetools.h
lib/types/: cfloat.h  dynablob.h
lib/world/: block.h  cave.cpp  cave.h  chunk.cpp  chunk.h  chunk2.h  coordinate.h  generator.h  location.h  manipulator.h  map.cpp  map.h  region.cpp  region.h  region2.h  regioncoord.h  world.cpp  world.h  worldcoord.h
tests/: Basic 2D rendering test  ECDH Keypair Binding Test  Entity Storage Test  Full Layer encrpytion test  Internal Networking test.txt  World Gen Test  graphicstest.txt  test.cs
ui/: halui.h
ui/elements/: grabPoint.h  panel.h  window.h
